--- a/static/css/common/module.css
+++ b/static/css/common/module.css
@@ -91,9 +91,6 @@
     border: 0.1rem solid #ABABAB;
     border-radius: 0.3rem;
     box-sizing: border-box;
-
-    /* 임시속성 */
-    margin-top: 1rem;
 }
 
 label[for=basic_file] {
@@ -262,7 +259,7 @@ label[for=basic_file] {
 
 
 /* 스크롤 테이블 */
-.basic_table_header_box{
+.basic_table_header_box {
     width: 100%;
     background-color: #4E5869;
 }
@@ -326,7 +323,341 @@ label[for=basic_file] {
 }
 
 .basic_table_header_box input[type=checkbox],
-.basic_table_scroll_box input[type=checkbox]{
+.basic_table_scroll_box input[type=checkbox] {
     zoom: 1.2;
     cursor: pointer;
+}
+
+
+
+
+
+
+/* 반응형 */
+@media screen and (min-width: 1921px) {
+    .basic_popup {
+        width: calc(100% - 22rem);
+    }
+
+    .basic_popup_box {
+        width: 64rem;
+        padding: 0 3rem;
+        border-radius: 0.3rem;
+    }
+
+    .basic_popup_main_header {
+        padding-top: 0.5rem;
+        height: 4rem;
+        font-size: 1.8rem;
+    }
+    
+    .basic_popup_header {
+        padding-top: 0.5rem;
+        height: 4rem;
+        font-size: 1.6rem;
+    }
+
+    .basic_popup_body {
+        padding: 3rem 0;
+        height: calc(100% - 16.5rem);
+    }
+    
+    .popup_input_article {
+        height: 2.8rem;
+    }
+
+    .popup_input_article label {
+        font-size: 1.6rem;
+        width: 11rem;
+    }
+    
+    .popup_input_article .basic_input {
+        width: calc(100% - 14rem);
+    }
+    
+    .basic_popup_footer {
+        height: 6rem;
+    }
+
+    .create_btn {
+        width: 7rem;
+        height: 2.8rem;
+        border-radius: 0.4rem;
+        font-size: 1.6rem;
+    }
+
+    .delete_btn {
+        width: 7rem;
+        height: 2.8rem;
+        border-radius: 0.4rem;
+        font-size: 1.6rem;
+    }
+
+    .basic_btn {
+        display: flex;
+        width: 7rem;
+        height: 2.8rem;
+        border-radius: 0.4rem;
+        font-size: 1.6rem;
+    }
+
+    .excel_btn {
+        width: 7rem;
+        height: 2.8rem;
+        border-radius: 0.4rem;
+        font-size: 1.6rem;
+    }
+
+    .basic_input,
+    .basic_select {
+        width: 26rem;
+        height: 2.8rem;
+        padding: 0.1rem 0.4rem 0.1rem 0.8rem;
+        font-size: 1.6rem;
+    }
+
+    .basic_file_box {
+        width: 26rem;
+        height: 2.8rem;
+    }
+
+    .basic_table_head_tr {
+        width: 100%;
+        height: 4.6rem;
+    }
+    
+    .basic_table_head_tr_td {
+        padding-left: 1.4rem;
+    }
+    
+    .basic_table_scroll_box {
+        min-height: 10.2rem;
+    }
+    
+    .basic_table_scroll_box::-webkit-scrollbar {
+        width: 0.8rem;
+    }
+    .basic_table_scroll_box td {
+        padding-left: 1.4rem;
+        height: 5.2rem;
+    }
+}
+
+@media screen and (min-width: 1367px) and (max-width: 1536px) {
+    .basic_popup {
+        width: calc(100% - 18rem);
+    }
+
+    .basic_popup_box {
+        width: 56rem;
+        padding: 0 1.5rem;
+        border-radius: 0.3rem;
+    }
+
+    .basic_popup_main_header {
+        padding-top: 0.3rem;
+        height: 3.6rem;
+        font-size: 1.4rem;
+    }
+    
+    .basic_popup_header {
+        padding-top: 0.3rem;
+        height: 3.6rem;
+        font-size: 1.2rem;
+    }
+
+    .basic_popup_body {
+        padding: 1.5rem 0;
+        height: calc(100% - 11.5rem);
+    }
+    
+    .popup_input_article {
+        height: 2.4rem;
+    }
+
+    .popup_input_article label {
+        font-size: 1.2rem;
+        width: 8rem;
+    }
+    
+    .popup_input_article .basic_input {
+        width: calc(100% - 9.5rem);
+    }
+    
+    .basic_popup_footer {
+        height: 4.2rem;
+    }
+
+    .create_btn {
+        width: 5rem;
+        height: 2.4rem;
+        border-radius: 0.3rem;
+        font-size: 1.2rem;
+    }
+
+    .delete_btn {
+        width: 5rem;
+        height: 2.4rem;
+        border-radius: 0.3rem;
+        font-size: 1.2rem;
+    }
+
+    .basic_btn {
+        display: flex;
+        width: 5rem;
+        height: 2.4rem;
+        border-radius: 0.3rem;
+        font-size: 1.2rem;
+    }
+
+    .excel_btn {
+        width: 5rem;
+        height: 2.4rem;
+        border-radius: 0.3rem;
+        font-size: 1.2rem;
+    }
+
+    .basic_input,
+    .basic_select {
+        width: 22rem;
+        height: 2.4rem;
+        padding: 0.1rem 0.4rem 0.1rem 0.6rem;
+        font-size: 1.2rem;
+    }
+
+    .basic_file_box {
+        width: 22rem;
+        height: 2.4rem;
+    }
+
+    .basic_table_head_tr {
+        width: 100%;
+        height: 3.8rem;
+    }
+    
+    .basic_table_head_tr_td {
+        padding-left: 0.8rem;
+    }
+    
+    .basic_table_scroll_box {
+        min-height: 8.4rem;
+    }
+    
+    .basic_table_scroll_box::-webkit-scrollbar {
+        width: 0.5rem;
+    }
+    .basic_table_scroll_box td {
+        padding-left: 0.8rem;
+        height: 4.4rem;
+    }
+
+}
+
+@media screen and (max-width: 1366px) {
+    .basic_popup {
+        width: calc(100% - 16rem);
+    }
+
+    .basic_popup_box {
+        width: 52rem;
+        padding: 0 1rem;
+        border-radius: 0.3rem;
+    }
+
+    .basic_popup_main_header {
+        padding-top: 0.2rem;
+        height: 3.4rem;
+        font-size: 1.2rem;
+    }
+    
+    .basic_popup_header {
+        padding-top: 0.2rem;
+        height: 3.4rem;
+        font-size: 1rem;
+    }
+
+    .basic_popup_body {
+        padding: 1rem 0;
+        height: calc(100% - 9.5rem);
+    }
+    
+    .popup_input_article {
+        height: 2.2rem;
+    }
+
+    .popup_input_article label {
+        font-size: 1rem;
+        width: 6rem;
+    }
+    
+    .popup_input_article .basic_input {
+        width: calc(100% - 7rem);
+    }
+    
+    .basic_popup_footer {
+        height: 3.8rem;
+    }
+
+    .create_btn {
+        width: 4rem;
+        height: 2.2rem;
+        border-radius: 0.2rem;
+        font-size: 1rem;
+    }
+
+    .delete_btn {
+        width: 4rem;
+        height: 2.2rem;
+        border-radius: 0.2rem;
+        font-size: 1rem;
+    }
+
+    .basic_btn {
+        display: flex;
+        width: 4rem;
+        height: 2.2rem;
+        border-radius: 0.2rem;
+        font-size: 1rem;
+    }
+
+    .excel_btn {
+        width: 4rem;
+        height: 2.2rem;
+        border-radius: 0.2rem;
+        font-size: 1rem;
+    }
+
+    .basic_input,
+    .basic_select {
+        width: 20rem;
+        height: 2.2rem;
+        padding: 0.1rem 0.4rem 0.1rem 0.4rem;
+        font-size: 1rem;
+    }
+
+    .basic_file_box {
+        width: 20rem;
+        height: 2.2rem;
+    }
+
+    .basic_table_head_tr {
+        width: 100%;
+        height: 3.4rem;
+    }
+    
+    .basic_table_head_tr_td {
+        padding-left: 0.6rem;
+    }
+    
+    .basic_table_scroll_box {
+        min-height: 7.6rem;
+    }
+    
+    .basic_table_scroll_box::-webkit-scrollbar {
+        width: 0.4rem;
+    }
+    .basic_table_scroll_box td {
+        padding-left: 0.6rem;
+        height: 4rem;
+    }
 }
