--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -331,8 +331,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    /* width: calc(100% - 1.6rem); */
-    width: 16rem;
+    width: calc(100% - 1.6rem);
     height: 100%;
     white-space: nowrap;
     overflow: hidden;
@@ -450,7 +449,7 @@
     width: 28%;
 }
 
-.table_click_box{
+.table_click_box {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -460,21 +459,481 @@
     cursor: pointer;
 }
 
-.table_click_icon{
+.table_click_icon {
     margin-right: 0.6rem;
 }
 
-.table_click_contents::after{
+.table_click_contents::after {
     display: none;
     content: "";
     transform: translate(0, 0.3rem);
     border-bottom: 0.1rem solid #61B4E5;
 }
 
-.table_click_box:hover .table_click_contents::after{
+.table_click_box:hover .table_click_contents::after {
     display: block;
 }
 
-.table_click_box:hover .table_click_contents{
+.table_click_box:hover .table_click_contents {
     transform: translate(0, 0.1rem);
+}
+
+
+
+
+
+
+/* 반응형 */
+@media screen and (min-width: 1921px) {
+    .schdule_search {
+        height: 5.6rem;
+        padding: 0 3rem;
+    }
+
+    .print_route,
+    .print_bus {
+        width: 8rem;
+        padding: 0 0.4rem;
+    }
+
+    .print_route svg,
+    .print_bus svg {
+        width: 1.5rem;
+    }
+
+    .bus_inspection {
+        width: 9.6rem;
+    }
+
+    .schdule_main {
+        margin-top: 3rem;
+    }
+
+    .calender_btn_box {
+        height: 5.6rem;
+    }
+
+    .calender_btn_box_date {
+        width: 22rem;
+        height: 3.6rem;
+        border-radius: 0.6rem;
+        font-size: 1.6rem;
+    }
+
+    .date_controll_Btn {
+        width: 3.6rem;
+        height: 3.6rem;
+        border-radius: 0.4rem;
+    }
+
+    .date_controll_Btn svg {
+        width: 1.5rem;
+    }
+
+    .calendar_switch_btn {
+        right: 3rem;
+        width: 9.6rem;
+        padding: 0 0.4rem;
+    }
+
+    .calendar_switch_btn svg {
+        width: 1.5rem;
+    }
+
+    .calender_header {
+        height: 4.2rem;
+    }
+
+    .calender_date_box {
+        width: calc(100% - (4rem / 7));
+        padding: 0 0.6rem;
+        margin: 0.6rem 0.6rem 0 0;
+        border-radius: 0.3rem;
+    }
+
+    .calender_date_cell {
+        height: 4rem;
+    }
+
+    .today {
+        padding: 0.5rem 1rem;
+        border-radius: 1.2rem;
+    }
+
+    .calender_contants_box {
+        height: calc(100% - 5.2rem);
+        margin-top: 0.6rem;
+    }
+
+    .dispatch_cnt_box {
+        width: calc((100% - 1.2rem)/10*3);
+    }
+
+    .dispatch_check {
+        top: -3.5rem;
+        right: 0;
+        width: 2.4rem;
+    }
+
+    .calender_schedule_Cell {
+        width: calc((100% - 1.2rem)/10*7);
+        padding: 0.6rem;
+    }
+
+    .schedule_cell_Item {
+        height: calc((100% - 1.8rem)/4 + 0.2rem);
+        padding-left: 1.2rem;
+        margin-bottom: 0.6rem
+    }
+
+    .regularly_cnt_cell, .order_cnt_cell {
+        height: calc((100% - 1.2rem)/2);
+    }
+
+    .dispatch_search_form label {
+        margin-right: 3rem;
+    }
+
+    .dispatch_search_form .basic_btn {
+        margin-left: 3rem;
+    }
+
+    .calender_order_box {
+        height: calc(100% - 4.6rem);
+    }
+
+    .calender_order_cell {
+        width: 100%;
+        height: calc(100% - 3.6rem);
+        padding: 0.6rem;
+    }
+
+    .calender_order_cell::-webkit-scrollbar {
+        width: 0.8rem;
+    }
+
+    .calender_order_item {
+        height: 2.8rem;
+        padding: 0 1.2rem;
+        margin-bottom: 0.6rem;
+    }
+
+    .calender_order_total {
+        height: 3rem;
+        padding: 0 0.6rem;
+    }
+    
+    .table_click_icon {
+        margin-right: 0.8rem;
+        width: 2.2rem;
+        height: 2.2rem;
+    }
+    
+    .table_click_contents::after {
+        transform: translate(0, 0.4rem);
+    }
+    
+    .table_click_box:hover .table_click_contents {
+        transform: translate(0, 0);
+    }
+}
+
+@media screen and (min-width: 1367px) and (max-width: 1536px) {
+    .schdule_search {
+        height: 4.2rem;
+        padding: 0 1.5rem;
+    }
+
+    .print_route,
+    .print_bus {
+        width: 6.6rem;
+        padding: 0 0.4rem;
+    }
+
+    .print_route svg,
+    .print_bus svg {
+        width: 1.3rem;
+        height: 1.3rem;
+    }
+
+    .bus_inspection {
+        width: 7.2rem;
+    }
+
+    .schdule_main {
+        margin-top: 1.5rem;
+    }
+
+    .calender_btn_box {
+        height: 4.2rem;
+    }
+
+    .calender_btn_box_date {
+        width: 16rem;
+        height: 2.4rem;
+        border-radius: 0.5rem;
+    }
+
+    .date_controll_Btn {
+        width: 2.4rem;
+        height: 2.4rem;
+        border-radius: 0.4rem;
+    }
+
+    .date_controll_Btn svg {
+        width: 1.3rem;
+    }
+
+    .calendar_switch_btn {
+        right: 1.5rem;
+        width: 7.2rem;
+        padding: 0 0.4rem;
+    }
+
+    .calendar_switch_btn svg {
+        width: 1.1rem;
+    }
+
+    .calender_header {
+        height: 3.2rem;
+    }
+
+    .calender_date_box {
+        width: calc(100% - (4rem / 7));
+        padding: 0 0.4rem;
+        margin: 0.4rem 0.4rem 0 0;
+        border-radius: 0.3rem;
+    }
+
+    .calender_date_cell {
+        height: 3.2rem;
+    }
+
+    .today {
+        padding: 0.4rem 0.8rem;
+        border-radius: 1.1rem;
+    }
+
+    .calender_contants_box {
+        height: calc(100% - 4rem);
+        margin-top: 0.4rem;
+    }
+
+    .dispatch_cnt_box {
+        width: calc((100% - 0.8rem)/10*3);
+    }
+
+    .dispatch_check {
+        top: -2.8rem;
+        right: 0;
+        width: 1.7rem;
+    }
+
+    .calender_schedule_Cell {
+        width: calc((100% - 0.8rem)/10*7);
+        padding: 0.4rem;
+    }
+
+    .schedule_cell_Item {
+        height: calc((100% - 1.2rem)/4 + 0.2rem);
+        padding-left: 0.8rem;
+        margin-bottom: 0.4rem
+    }
+
+    .dispatch_search_form label {
+        margin-right: 1.5rem;
+    }
+
+    .dispatch_search_form .basic_btn {
+        margin-left: 1.5rem;
+    }
+
+    .calender_order_box {
+        height: calc(100% - 3.6rem);
+    }
+
+    .calender_order_cell {
+        width: 100%;
+        height: calc(100% - 2.9rem);
+        padding: 0.4rem;
+    }
+
+    .calender_order_cell::-webkit-scrollbar {
+        width: 0.5rem;
+    }
+
+    .calender_order_item {
+        height: 2.4rem;
+        padding: 0 0.8rem;
+        margin-bottom: 0.4rem;
+    }
+
+    .calender_order_total {
+        height: 2.5rem;
+        padding: 0 0.4rem;
+    }
+    
+    .table_click_icon {
+        margin-right: 0.5rem;
+        width: 1.8rem;
+        height: 1.8rem;
+    }
+    
+    .table_click_contents::after {
+        transform: translate(0, 0.2rem);
+    }
+    
+    .table_click_box:hover .table_click_contents {
+        transform: translate(0, 0rem);
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    .schdule_search {
+        height: 3.6rem;
+        padding: 0 1rem;
+    }
+
+    .print_route,
+    .print_bus {
+        width: 6rem;
+        padding: 0 0.3rem;
+    }
+
+    .print_route svg,
+    .print_bus svg {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
+
+    .bus_inspection {
+        width: 6.4rem;
+    }
+
+    .schdule_main {
+        margin-top: 1rem;
+    }
+
+    .calender_btn_box {
+        height: 3.6rem;
+    }
+
+    .calender_btn_box_date {
+        width: 13rem;
+        height: 2.2rem;
+        border-radius: 0.5rem;
+    }
+
+    .date_controll_Btn {
+        width: 2.2rem;
+        height: 2.2rem;
+        border-radius: 0.3rem;
+    }
+
+    .date_controll_Btn svg {
+        width: 1.2rem;
+    }
+
+    .calendar_switch_btn {
+        right: 1rem;
+        width: 6.4rem;
+        padding: 0 0.4rem;
+    }
+
+    .calendar_switch_btn svg {
+        width: 1rem;
+    }
+
+    .calender_header {
+        height: 2.6rem;
+    }
+
+    .calender_date_box {
+        width: calc(100% - (4rem / 7));
+        padding: 0 0.3rem;
+        margin: 0.3rem 0.3rem 0 0;
+        border-radius: 0.3rem;
+    }
+
+    .calender_date_cell {
+        height: 2.2rem;
+    }
+
+    .today {
+        padding: 0.3rem 0.6rem;
+        border-radius: 1rem;
+    }
+
+    .calender_contants_box {
+        height: calc(100% - 2.8rem);
+        margin-top: 0.3rem;
+    }
+
+    .dispatch_cnt_box {
+        width: calc((100% - 0.6rem)/10*3);
+    }
+
+    .dispatch_check {
+        top: -2.4rem;
+        right: 0;
+        width: 1.4rem;
+    }
+
+    .calender_schedule_Cell {
+        width: calc((100% - 0.6rem)/10*7);
+        padding: 0.3rem;
+    }
+
+    .schedule_cell_Item {
+        height: calc((100% - 0.9rem)/4 + 0.2rem);
+        padding-left: 0.6rem;
+        margin-bottom: 0.3rem
+    }
+
+    .dispatch_search_form label {
+        margin-right: 1rem;
+    }
+
+    .dispatch_search_form .basic_btn {
+        margin-left: 1rem;
+    }
+
+    .calender_order_box {
+        height: calc(100% - 2.5rem);
+    }
+
+    .calender_order_cell {
+        width: 100%;
+        height: calc(100% - 2.7rem);
+        padding: 0.3rem;
+    }
+
+    .calender_order_cell::-webkit-scrollbar {
+        width: 0.4rem;
+    }
+
+    .calender_order_item {
+        height: 2.2rem;
+        padding: 0 0.6rem;
+        margin-bottom: 0.3rem;
+    }
+
+    .calender_order_total {
+        height: 2.2rem;
+        padding: 0 0.3rem;
+    }
+    
+    .table_click_icon {
+        margin-right: 0.4rem;
+        width: 1.6rem;
+        height: 1.6rem;
+    }
+    
+    .table_click_contents::after {
+        transform: translate(0, 0.2rem);
+    }
+    
+    .table_click_box:hover .table_click_contents {
+        transform: translate(0, 0rem);
+    }
 }
