호수별 프린트 수정/노선별 안됨

--- a/crudmember/templates/crudmember/home.html
+++ b/crudmember/templates/crudmember/home.html
@@ -488,4 +488,5 @@
 <script src="{% static 'js/crudmember/calender/dispatchCheckPopup.js' %}"></script>
 <script src="{% static 'js/crudmember/calender/dispatchCalenderFilter.js' %}"></script>
 <script src="{% static 'js/crudmember/calender/inspectionPopup.js' %}"></script>
+<script src="{% static 'js/crudmember/calender/print.js' %}"></script>
 {% endblock %}
