--- a/dispatch/templates/dispatch/daily_driving_list.html
+++ b/dispatch/templates/dispatch/daily_driving_list.html
@@ -18,7 +18,15 @@
                     d="M.18,15.96V10.965L1.92,9.03H3.195v.96h-.84l-1.2,1.335V15H13.08V11.325L11.88,9.99h-.84V9.03h1.275l1.725,1.935V15.96H.18Zm3.015-4.785V6.225L5.46,3.96h5.58v7.215Zm.9-.915H10.14V4.86H6.36V7.125H4.095Z"
                     transform="translate(-0.18 -3.961)" />
             </svg>
-            <span onclick="openDrivingPrint('/dispatch/print/daily')">인쇄</span>
+            <span onclick="openDrivingPrint('/dispatch/print/daily')">운행일보</span>
+        </div>
+        <div class="bus_print_btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="13.859" height="12" viewBox="0 0 13.859 12">
+                <path id="Icon_zocial-print" data-name="Icon zocial-print"
+                    d="M.18,15.96V10.965L1.92,9.03H3.195v.96h-.84l-1.2,1.335V15H13.08V11.325L11.88,9.99h-.84V9.03h1.275l1.725,1.935V15.96H.18Zm3.015-4.785V6.225L5.46,3.96h5.58v7.215Zm.9-.915H10.14V4.86H6.36V7.125H4.095Z"
+                    transform="translate(-0.18 -3.961)" />
+            </svg>
+            <span onclick="busPrint()">호수별</span>
         </div>
         <div class="pageTitle">
             <span></span>
@@ -28,7 +36,7 @@
             <span>배차지시서 (호수별)</span>
         </div>
         <div class="headerCell">
-            <div>
+            <div class="checkbox_td">
                 <input autocomplete="off" type="checkbox">
             </div>
             <div>기사명</div>
@@ -46,7 +54,7 @@
                     {% with c_connect=c_connect_object|obj:member.id %}
                     {% if e_connect or connect or c_connect or request.session.authority > 3 %}
                     <tr class="{{member.id}}">
-                        <td>
+                        <td class="checkbox_td">
                             <input autocomplete="off" type="checkbox">
                         </td>
                         <td>{{member.name}}</td>
@@ -88,6 +96,11 @@
     </div>
 </body>
 
+<script>
+    function busPrint(){
+        window.print()
+    }
+</script>
 <script src="{% static 'js/dispatch/before/bus_Print.js' %}"></script>
 <script src="{% static 'js/dispatch/before/printCheck.js' %}"></script>
 
