DispatchRegularlyData 처리 추가 수정 - 배차내역 부분, 출퇴근 날짜 변경할때 불러오는 데이터 수정

--- a/crudmember/templates/crudmember/home.html
+++ b/crudmember/templates/crudmember/home.html
@@ -68,7 +68,7 @@
     </div>
     <div class="alarmArea">
       <div class="alarm">정기점검</div>
-      <div class="vhicleCheck inspectionAlarm{% if vehicle_list %}inspectionAlarm{% endif %}"><!-- inspectionAlarm -->
+      <div class="vhicleCheck {% if vehicle_list %}inspectionAlarm{% endif %}"><!-- inspectionAlarm -->
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
           <path id="Icon_awesome-bus" data-name="Icon awesome-bus"
             d="M19.063,5H18.75V3.125C18.75,1.375,14.875,0,10,0S1.25,1.375,1.25,3.125V5H.938A.937.937,0,0,0,0,5.938V9.063A.938.938,0,0,0,.938,10H1.25v6.25A1.25,1.25,0,0,0,2.5,17.5v1.25A1.25,1.25,0,0,0,3.75,20H5a1.25,1.25,0,0,0,1.25-1.25V17.5h7.5v1.25A1.25,1.25,0,0,0,15,20h1.25a1.25,1.25,0,0,0,1.25-1.25V17.5h.25a.986.986,0,0,0,1-1V10h.313A.938.938,0,0,0,20,9.063V5.938A.937.937,0,0,0,19.063,5ZM4.375,15.625a1.25,1.25,0,1,1,1.25-1.25A1.25,1.25,0,0,1,4.375,15.625ZM5,11.25A1.25,1.25,0,0,1,3.75,10V5A1.25,1.25,0,0,1,5,3.75H15A1.25,1.25,0,0,1,16.25,5v5A1.25,1.25,0,0,1,15,11.25Zm10.625,4.375a1.25,1.25,0,1,1,1.25-1.25A1.25,1.25,0,0,1,15.625,15.625Z"
