--- a/notice/templates/notice/kinds.html
+++ b/notice/templates/notice/kinds.html
@@ -100,10 +100,13 @@
         {% endif %}
       </div>
       <div class="btnBox">
-        {% if kinds == "office" %}<a href="{% url 'notice:create' %}?kinds=office">
-        {% else %} <a href="{% url 'notice:create' %}?kinds=driver"> {% endif %}
-          <div class="createBtn">등록</div>
-        </a>
+        {% if kinds == "office" %}
+          <a href="{% url 'notice:create' %}?kinds=office">
+        {% else %}
+          <a href="{% url 'notice:create' %}?kinds=driver">
+        {% endif %}
+            <div class="createBtn">등록</div>
+          </a>
       </div>
 
     </div>
