--- a/templates/base.html
+++ b/templates/base.html
@@ -306,7 +306,7 @@
 
       <div class="HomePopupAreaModules">
         <div class="HomePopupBgModules"></div>
-        <div class="HomePopupContainer HomePopupContainerPw">
+        <form class="HomePopupContainer HomePopupContainerPw">
             {% csrf_token %}
             <div class="popupHeader">
                 <div class="popupTitle">비밀번호 변경</div>
@@ -331,7 +331,7 @@
                     <div class="btnModules HomeCloseBtn">닫기</div>
                 </div>
             </div>
-        </div>
+        </form>
       </div>
 
       <!-- 검색모듈 -->
