--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -373,20 +373,20 @@
             {% with outsourcing=group_outsourcing_list|index:forloop.counter0 %}
 
             
-            <tr class="RouteListHBodyTr {{order.id}} {{forloop.counter}}">
+            <tr class="RouteListHBodyTr {{order.regularly_id.id}} {{forloop.counter}}">
               <td>
                 <input autocomplete="off" value="{{order.id}}" name="check" type="checkbox">
               </td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.number1}}{% if order.number2 %} - {{order.number2}}{% endif %}</td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.route}}</td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.number1}}{% if order.number2 %} - {{order.number2}}{% endif %}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.route}}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">
                 {% if departure_time_list|index:forloop.counter0 and arrival_time_list|index:forloop.counter0 %}
                 {{departure_time_list|index:forloop.counter0}} ~ {{arrival_time_list|index:forloop.counter0}}
                 {% else %}
                 {{order.departure_time}} ~ {{order.arrival_time}}
                 {% endif %}
               </td>
-              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
+              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %}
                   <input autocomplete="off" value="{{bus.vehicle_num}}" type="text">
                   <input autocomplete="off" value="{{bus.id}}" name="bus" type="hidden">
@@ -394,7 +394,7 @@
                   {{bus.vehicle_num}}
                 {% endif %}
               </td>
-              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
+              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %} 
                   <select name="driver" class="driverSelect">
                     <option value="{{driver.id}}">{{driver.name}}</option>
@@ -403,7 +403,7 @@
                   {{driver.name}}
                 {% endif %}
               </td>
-              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
+              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %}
                 <select name="outsourcing" class="outsorcingSelect">
                   <option value="{{outsourcing.id}}">{{outsourcing.name}}</option>
@@ -412,7 +412,7 @@
                   {{outsourcing.name}}
                 {% endif %}
               </td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.departure}} ▶ {{order.arrival}}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.regularly_id.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.departure}} ▶ {{order.arrival}}</td>
             </tr>
             {% endwith %}
             {% endwith %}
