출퇴근배차 - 배차내역, 배차 불러오기, 배차 삭제 부분 수정

--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -459,7 +459,7 @@
               {% endfor %}
             </div>
 
-            <input autocomplete="off" type="hidden" name="id" class="historyHiddenRoute">
+            <input autocomplete="off" type="hidden" name="id" value="{{detail.id}}" class="historyHiddenRoute">
             <input autocomplete="off" type="hidden" name="group" class="historyHiddenGroup">
             <input autocomplete="off" type="hidden" name="date" class="historyHiddenDate">
             <input autocomplete="off" type="hidden" name="outsourcing" class="historyHiddenOutsourcing">
